# rust-talk

./: .gitignore  README.md
code-refactored/: Cargo.toml
code-refactored/src/: github.rs  lib.rs  main.rs
code-simple/: Cargo.toml
code-simple/src/: client.rs  main.rs  repos.json
slides/: slides.md
slides/src/: index.js  slides.md
