[package]
name = "code-http"
version = "0.1.0"
authors = ["Matti Korttila <matti.korttila@sysart.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "git_client"

[[bin]]

name = "repos"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.2", features = ["blocking", "json", "stream"] }
